owncloud/mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: my-cloud
  labels:
    app: mariadb
spec:
  # strategy:
    # type: Recreate
  serviceName: 'mariadb'
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: centos/mariadb-102-centos7
        imagePullPolicy: Always
        ports:
        - name: mysql
          containerPort: 3306
        volumeMounts:
        - name: storage
          mountPath: /var/lib/mysql
          subPath: mysql
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: pvc-owncloud
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  selector:
    app: mariadb
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
