owncloud/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud
  namespace: my-cloud
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: my-cloud.site
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: owncloud
            port:
              number: 80
